--- a/WhisperAX.xcodeproj/xcshareddata/xcschemes/WhisperAX Watch App.xcscheme
+++ b/WhisperAX.xcodeproj/xcshareddata/xcschemes/WhisperAX Watch App.xcscheme
@@ -4,8 +4,23 @@
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "161135DD2B3F66DA003C20F6"
+               BuildableName = "WhisperAX Watch App.app"
+               BlueprintName = "WhisperAX Watch App"
+               ReferencedContainer = "container:WhisperAX.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -34,9 +49,9 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "167B34702B05431F0076F261"
-               BuildableName = "WhisperAXTests.xctest"
-               BlueprintName = "WhisperAXTests"
+               BlueprintIdentifier = "161135EF2B3F66DC003C20F6"
+               BuildableName = "WhisperAX Watch AppTests.xctest"
+               BlueprintName = "WhisperAX Watch AppTests"
                ReferencedContainer = "container:WhisperAX.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -45,9 +60,9 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "167B347A2B05431F0076F261"
-               BuildableName = "WhisperAXUITests.xctest"
-               BlueprintName = "WhisperAXUITests"
+               BlueprintIdentifier = "161135F92B3F66DC003C20F6"
+               BuildableName = "WhisperAX Watch AppUITests.xctest"
+               BlueprintName = "WhisperAX Watch AppUITests"
                ReferencedContainer = "container:WhisperAX.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -67,24 +82,12 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "167B345D2B05431E0076F261"
-            BuildableName = "Scribe.app"
-            BlueprintName = "WhisperAX"
+            BlueprintIdentifier = "161135DD2B3F66DA003C20F6"
+            BuildableName = "WhisperAX Watch App.app"
+            BlueprintName = "WhisperAX Watch App"
             ReferencedContainer = "container:WhisperAX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "MODEL_NAME"
-            value = "$(MODEL_NAME)"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "MODEL_REPO"
-            value = "$(MODEL_REPO)"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -96,9 +99,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "167B345D2B05431E0076F261"
-            BuildableName = "Scribe.app"
-            BlueprintName = "WhisperAX"
+            BlueprintIdentifier = "161135DD2B3F66DA003C20F6"
+            BuildableName = "WhisperAX Watch App.app"
+            BlueprintName = "WhisperAX Watch App"
             ReferencedContainer = "container:WhisperAX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
