--- a/WhisperAX/Info.plist
+++ b/WhisperAX/Info.plist
@@ -10,6 +10,11 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
+	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>com.scribe.whisperax.background-processing</string>
 	</array>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs microphone access to perform speech recognition.</string>
