--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.bin filter=lfs diff=lfs merge=lfs -text
+*.mlmodelc/** filter=lfs diff=lfs merge=lfs -text
 *.mlpackage/** filter=lfs diff=lfs merge=lfs -text
 *.bin !text !filter !merge !diff
